chore: tail test

--- a/test_controller/docker/Dockerfile
+++ b/test_controller/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3
 WORKDIR /usr/src/app
 COPY ./test_controller/docker ./
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends vim && \
+    apt-get install -y --no-install-recommends vim procps && \
     rm -rf /var/lib/apt/lists/*
 RUN pip3 install --no-cache-dir -r requirements.txt
 EXPOSE 80
