fix: crashed pod

--- a/test_controller/docker/Dockerfile
+++ b/test_controller/docker/Dockerfile
@@ -7,4 +7,4 @@ RUN apt-get update && \
 RUN pip3 install --no-cache-dir -r requirements.txt
 EXPOSE 80
 EXPOSE 443
-CMD ["tail", "-f", "/dev/null"]
+CMD ["python", "-u", "./test-case.py", "-v"]
