--- a/test_controller/infrastructure/test-controller-deployment.yaml
+++ b/test_controller/infrastructure/test-controller-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: test-case-container
           image: 975050196742.dkr.ecr.eu-central-1.amazonaws.com/insider/test-case:latest
+          command: ['sh', '-c', 'echo The app is running! && sleep 3600']
           ports:
             - containerPort: 80
             - containerPort: 443
