--- a/chrome_node/infrastructure/chrome-node-deployment.yaml
+++ b/chrome_node/infrastructure/chrome-node-deployment.yaml
@@ -39,7 +39,7 @@ spec:
             timeoutSeconds: 5
 
         - name: selenium-node-chrome
-          image: selenium/node-chromium:latest
+          image: selenium/node-chrome:latest
           ports:
             - containerPort: 5555
           volumeMounts:
